tweak footer middle styling ensure aria state changes on collapse toggle

--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -194,7 +194,7 @@
     }
 
     @include media-breakpoint-up(sm){
-      padding: 1rem 0;
+      padding: 1rem 0 0.5rem;
 
       .footer-section-title{
         margin: 0 0 0.5rem 0;
@@ -216,8 +216,28 @@
 
   }
   .global-footer-middle{
+
     @include media-breakpoint-up(md) {
-      padding: 1rem 0;
+
+      padding: 1rem 0 0rem;
+      .container {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+        padding-bottom: 0.5rem;
+      }
+      .col-md-3{
+        h5 {
+          margin-top: 1rem;
+          padding-top: 1rem;
+          border-top: 1px solid rgba(255,255,255,0.5);
+
+          &:first-child {
+            border-top: none;
+            padding-top: 0;
+            margin-top: 0;
+          }
+        }
+      }
+
     }
   }
 }
